--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,9 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+jib {
+    to {
+        image = 'gcr.io/timo-schaefer/demo'
+    }
+}
